<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

  <TextView
      android:id="@+id/result"
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:textAlignment="textEnd"
      android:textColor="@color/white"
      android:textSize="64sp"
      app:layout_constraintBottom_toTopOf="@id/number_07"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/number_07"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/dark_grey"
      android:text="@string/seven"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/number_04"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/number_08"
      app:layout_constraintTop_toBottomOf="@id/result"
      app:layout_constraintVertical_chainStyle="spread_inside"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/number_08"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/dark_grey"
      android:text="@string/eight"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/number_05"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/number_07"
      app:layout_constraintRight_toLeftOf="@id/number_09"
      app:layout_constraintTop_toBottomOf="@id/result"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/number_09"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/dark_grey"
      android:text="@string/nine"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/number_06"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/number_08"
      app:layout_constraintRight_toLeftOf="@id/divide"
      app:layout_constraintTop_toBottomOf="@id/result"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/divide"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/orange"
      android:text="@string/divide"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/multiply"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/number_09"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/result"
      app:layout_constraintVertical_weight="1" />


  <Button
      android:id="@+id/number_04"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/dark_grey"
      android:text="@string/four"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/number_01"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/number_05"
      app:layout_constraintTop_toBottomOf="@id/number_07"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/number_05"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/dark_grey"
      android:text="@string/five"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/number_02"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/number_04"
      app:layout_constraintRight_toLeftOf="@id/number_06"
      app:layout_constraintTop_toBottomOf="@id/number_08"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/number_06"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/dark_grey"
      android:text="@string/six"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/number_03"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/number_05"
      app:layout_constraintRight_toLeftOf="@id/multiply"
      app:layout_constraintTop_toBottomOf="@id/number_09"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/multiply"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/orange"
      android:text="@string/multiply"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/minus"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/number_06"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/divide"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/number_01"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/dark_grey"
      android:text="@string/one"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/number_0"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/number_02"
      app:layout_constraintTop_toBottomOf="@id/number_04"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/number_02"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/dark_grey"
      android:text="@string/two"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/clear"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/number_01"
      app:layout_constraintRight_toLeftOf="@id/number_03"
      app:layout_constraintTop_toBottomOf="@id/number_05"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/number_03"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/dark_grey"
      android:text="@string/three"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/equals"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/number_02"
      app:layout_constraintRight_toLeftOf="@id/minus"
      app:layout_constraintTop_toBottomOf="@id/number_06"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/minus"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/orange"
      android:text="@string/minus"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toTopOf="@id/plus"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/number_03"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/multiply"
      app:layout_constraintVertical_weight="1" />


  <Button
      android:id="@+id/number_0"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/dark_grey"
      android:text="@string/zero"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/clear"
      app:layout_constraintTop_toBottomOf="@id/number_01"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/clear"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/light_grey"
      android:text="@string/clear"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/number_0"
      app:layout_constraintRight_toLeftOf="@id/equals"
      app:layout_constraintTop_toBottomOf="@id/number_02"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/equals"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/orange"
      android:text="@string/equals"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/clear"
      app:layout_constraintRight_toLeftOf="@id/plus"
      app:layout_constraintTop_toBottomOf="@id/number_03"
      app:layout_constraintVertical_weight="1" />

  <Button
      android:id="@+id/plus"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginLeft="3dp"
      android:layout_marginRight="3dp"
      android:backgroundTint="@color/orange"
      android:text="@string/plus"
      android:textColor="@color/white"
      android:textSize="36sp"
      app:cornerRadius="50dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintLeft_toRightOf="@id/equals"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/minus"
      app:layout_constraintVertical_weight="1" />
</androidx.constraintlayout.widget.ConstraintLayout>
